extractions du module auth de user